rnsc/test_data/integration/error/parser/super_directive/multiple_definitions_with_missing_operand.rns
.class MyClass

.super
.super secondClass